--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
     }
     body{
       font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      margin: 0; padding: 24px; background: #cdebf3;
+      margin: 0; padding: 24px; background: #d7d9d2;
     }
     main{ max-width: 720px; margin: 0 auto; }
   </style>
@@ -140,6 +140,8 @@
       <div class="byline">By National Geographic Staff</div>
       <!-- The widget (v108+) will insert the Listen pill right under the H1 -->
     </header>
+
+    <button id="ai-listen-btn" class="listen-btn">Listen</button>
 
     <!-- Paste ONLY readable story text here: paragraphs, lists, blockquotes. -->
     <!-- You can omit images, captions, embeds, and footnotes (the widget strips them anyway). -->
