--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,8 @@
     main{ max-width: 720px; margin: 0 auto; }
 
     /* timebar numbers in black */
-    .ai-timebar span{ color:#000; }
+    #mp-elapsed, #mp-total { color:#000; }
+
   </style>
   <script>
     /* Enables the CSS mask-icon mode in mini-player.css */
