--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
   <script>
     // Default: demo mode (no backend calls)
     window.AIL_DISABLE_TTS = true;
-    window.AIL_AUDIO_URL   = "/audio/article-demo.mp3"; // make sure this exists
+    window.AIL_AUDIO_URL   = "/article-demo.mp3"; // make sure this exists
 
     // Optional private live toggle: add ?live=1 to the URL to enable backend
     try {
