--- a/static/index.html
+++ b/static/index.html
@@ -86,7 +86,7 @@
     <section style="margin-top:20px;padding-top:8px;border-top:1px solid #eee">
       <h3>Baseline audio (HTML5 controls)</h3>
       <audio controls preload="metadata" style="width:100%">
-        <source src="/audio/article-demo.mp3" type="audio/mpeg" />
+        <source src="/public/audio/article-demo.mp3" type="audio/mpeg" />
       </audio>
       <small>For side-by-side UX comparison. This is static and cost-free.</small>
     </section>
