Serve static audio

--- a/static/index.html
+++ b/static/index.html
@@ -41,7 +41,7 @@
   <script>
     // Default: demo mode (no backend calls)
     window.AIL_DISABLE_TTS = true;
-    window.AIL_AUDIO_URL   = "/public/audio/article-demo3.mp3"; // make sure this exists
+    window.AIL_AUDIO_URL   = "/audio/article-demo3.mp3"; // make sure this exists
 
     // Optional private live toggle: add ?live=1 to the URL to enable backend
     try {
@@ -86,7 +86,7 @@
     <section style="margin-top:20px;padding-top:8px;border-top:1px solid #eee">
       <h3>Baseline audio (HTML5 controls)</h3>
       <audio controls preload="metadata" style="width:100%">
-        <source src="/public/audio/article-demo.mp3" type="audio/mpeg" />
+        <source src="/audio/article-demo.mp3" type="audio/mpeg" />
       </audio>
       <small>For side-by-side UX comparison. This is static and cost-free.</small>
     </section>
