update demo page to show button2

--- a/static/index.html
+++ b/static/index.html
@@ -79,214 +79,9 @@
       <p>Those imaging tools and techniques, combined with machine learning trained to find patterns in data, have helped her uncover thousands of previously unknown settlements and tombs within known archeological sites. But newer AI models could build on those uses by looking beyond established archeological targets, turning up entirely new areas for archeologists to investigate, she says. </p>
       <p>Many sites are disappearing across the world as sea levels rise, vegetation spreads or recedes, and as humans build and migrate, abandoning or destroying valuable historical records.</p>
     </article>
+  </main>
 
-    function numberToWordsUS(num){
-      const ones=["zero","one","two","three","four","five","six","seven","eight","nine"];
-      const teens=["ten","eleven","twelve","thirteen","fourteen","fifteen","sixteen","seventeen","eighteen","nineteen"];
-      const tens=["","","twenty","thirty","forty","fifty","sixty","seventy","eighty","ninety"];
-      function chunk(n){ let s="",h=Math.floor(n/100),t=n%100;
-        if(h) s+=ones[h]+" hundred";
-        if(t){ if(s) s+=" "; if(t<10) s+=ones[t]; else if(t<20) s+=teens[t-10];
-          else { s+=tens[Math.floor(t/10)]; if(t%10) s+="-"+ones[t%10]; } }
-        return s||"zero";
-      }
-      if(num===0) return "zero";
-      const units=[""," thousand"," million"," billion"], parts=[];
-      for(let i=0; num>0 && i<units.length; i++){ const c=num%1000; if(c) parts.unshift(chunk(c)+units[i]); num=Math.floor(num/1000); }
-      return parts.join(" ");
-    }
-    function normalizeNumbers(text){
-      return text.replace(/\b\d{1,3}(?:,\d{3})+\b|\b\d{4,9}\b/g, m=>{
-        const n=Number(m.replace(/,/g,"")); return Number.isFinite(n)?numberToWordsUS(n):m;
-      });
-    }
-    async function ensureMini(){
-      if (window.AiMini) return;
-      await new Promise((ok,err)=>{
-        const s=document.createElement("script");
-        s.src="/mini-player.js?v=108";
-        s.onload=ok; s.onerror=err;
-        document.head.appendChild(s);
-      });
-    }
-    function AIL_buildNarration(sel=SEL){
-      const title = (document.querySelector("h1")?.innerText || "").trim();
-      const dek   = (document.querySelector(".dek,.subtitle,h2")?.innerText || "").trim();
-      const by    = (document.querySelector(".byline")?.textContent || "").replace(/^By\s*/i,"").trim();
-
-      const root = document.querySelector(sel) || document.body;
-      const clone = root.cloneNode(true);
-      clone.querySelectorAll([
-        "figure,figcaption,picture,video,iframe,svg,canvas",
-        ".caption,.credit,.media,.gallery,.photo",
-        "sup,sub,.citation,[role='doc-footnote'],.footnotes,.references",
-        "aside,.related,.read-more,.recommended",
-        "nav,header,footer,form,script,style"
-      ].join(",")).forEach(n=>n.remove());
-
-      const blocks=[];
-      clone.querySelectorAll("p,li,blockquote,h2,h3").forEach(n=>{
-        const s=(n.innerText||"").replace(/\s+/g," ").trim();
-        if (s) blocks.push(s);
-      });
-      let body = blocks.join("\n\n");
-      if (title && body.toLowerCase().startsWith(title.toLowerCase())) body = body.slice(title.length).trim();
-      body = body.replace(/^\s*By\s+.+?(\.\s+|\n{1,}|  +)/i,"");
-
-      const plain = [title, dek, by?`By ${by}`:"", body].filter(Boolean).join("\n\n");
-      return { title, dek, by, plain };
-    }
-
-    let busy=false;
-    async function play(){
-      if (busy) return; busy=true;
-      try{
-        await ensureMini();
-
-        const { title, dek, plain } = AIL_buildNarration();
-        const pageTitle = title || "AI Listen";
-        const subRaw    = dek || (document.querySelector(".byline")?.textContent?.trim()) || location.hostname;
-
-        // open mini + bind timebar
-        window.AiMini.open({ title: firstWords(pageTitle,5), subtitle: firstWords(subRaw,5) });
-        setTimeout(()=>{ const t=document.querySelector("#ai-mini .ai-title"); if (t) t.title = pageTitle; },0);
-        window.AIL_bindTimebar && window.AIL_bindTimebar();
-
-        // ===== DEMO SHORT-CIRCUIT: use static MP3, skip backend =====
-        if (window.AIL_DISABLE_TTS && window.AIL_AUDIO_URL) {
-          const a = window.AiMini.audio?.()
-                 || document.getElementById("ai-listen-audio")
-                 || (()=>{ const el=document.createElement("audio"); el.id="ai-listen-audio"; document.body.appendChild(el); return el; })();
-          try{ a.pause(); a.removeAttribute("src"); a.currentTime=0; }catch{}
-          a.src = window.AIL_AUDIO_URL;
-          a.preload = "auto";
-          a.addEventListener("canplay", ()=>a.play().catch(()=>{}), { once:true });
-          a.load();
-          return; // <-- no network, cost $0
-        }
-
-        // ===== LIVE PATH (only when ?live=1) =====
-        const spoken = normalizeNumbers(plain);
-        const r = await fetch(BASE + "/api/tts", {
-          method:"POST",
-          headers:{ "content-type":"application/json", "x-tenant-key": TENANT },
-          body: JSON.stringify({ text: spoken, voice_id: VOICE, preset: "news", bust: Date.now() })
-        });
-        const raw = await r.text();
-        if (!r.ok) throw new Error(`TTS ${r.status}: ${raw}`);
-        const j = JSON.parse(raw);
-        let url = j.audioUrl || j.audio_url || j.url;
-        if (url && !/^https?:\/\//i.test(url)) url = BASE + url;
-
-        const a = window.AiMini.audio?.()
-               || document.getElementById("ai-listen-audio")
-               || (()=>{ const el=document.createElement("audio"); el.id="ai-listen-audio"; document.body.appendChild(el); return el; })();
-
-        try{ a.pause(); a.removeAttribute("src"); a.currentTime=0; }catch{}
-        a.src=url; a.preload="auto";
-        a.addEventListener("canplay", ()=>a.play().catch(()=>{}), { once:true });
-        a.load();
-      }catch(e){
-        console.error("[AIL hotfix] play failed", e);
-        alert("Playback error (see console).");
-      }finally{ busy=false; }
-    }
-
-    // one click binding; stop other handlers from double-firing
-    document.addEventListener("click", (e)=>{
-      const btn = e.target.closest("#ai-listen-btn");
-      if (!btn) return;
-      e.preventDefault();
-      e.stopImmediatePropagation();
-      play();
-    });
-  })();
-  </script>
-
-  <!-- ===== Time labels: wait for mini, then attach (elapsed / total) ===== -->
-  <script>
-  (function(){
-    function fmt(t){ if(!isFinite(t)||t<0) return "0:00";
-      const m=Math.floor(t/60), s=Math.floor(t%60);
-      return m+":"+(s<10?"0"+s:s);
-    }
-    function bindWhenReady(){
-      const mini = document.getElementById("ai-mini");
-      if (!mini) return;
-      const target = mini.querySelector(".ai-meter, .ai-progress");
-      if (target) return bind(target);
-      const mo = new MutationObserver(() => {
-        const t = mini.querySelector(".ai-meter, .ai-progress");
-        if (t){ mo.disconnect(); bind(t); }
-      });
-      mo.observe(mini, { childList:true, subtree:true });
-    }
-    function bind(target){
-      let row = target.parentElement.querySelector(".ai-timebar");
-      if (!row){
-        row = document.createElement("div");
-        row.className = "ai-timebar";
-        row.innerHTML = `<span data-ai-elapsed>0:00</span><span data-ai-total>0:00</span>`;
-        (target.parentElement || target).appendChild(row);
-      }
-      const el  = row.querySelector("[data-ai-elapsed]");
-      const tot = row.querySelector("[data-ai-total]");
-      const a = (window.AiMini && window.AiMini.audio && window.AiMini.audio())
-             || document.getElementById("ai-listen-audio");
-      if (!a) return;
-      const updTot = ()=>{ if (tot) tot.textContent = fmt(a.duration); };
-      const updCur = ()=>{ if (el)  el.textContent  = fmt(a.currentTime); };
-      a.addEventListener("loadedmetadata", updTot);
-      a.addEventListener("durationchange",  updTot);
-      a.addEventListener("timeupdate",      updCur);
-      a.addEventListener("ended",           updCur);
-      updTot(); updCur();
-    }
-    window.AIL_bindTimebar = function(){
-      if (document.getElementById("ai-mini")) bindWhenReady();
-      else {
-        const mo = new MutationObserver(()=>{
-          if (document.getElementById("ai-mini")){ mo.disconnect(); bindWhenReady(); }
-        });
-        mo.observe(document.body, { childList:true, subtree:true });
-      }
-    };
-  })();
-  </script>
-
-  <!-- ===== Don’t let the mini cover content (reserve bottom padding while open) ===== -->
-  <script>
-  (function(){
-    function attach(mini){
-      const root = document.documentElement;
-      function setPad(){
-        const h = mini.offsetHeight || 120;
-        root.style.setProperty('--ai-mini-pad', (h + 16) + 'px');
-        root.classList.add('ai-mini-open');
-      }
-      function clearPad(){ root.classList.remove('ai-mini-open'); }
-      const mo = new MutationObserver(() => {
-        if (mini.classList.contains('show')) setPad(); else clearPad();
-      });
-      mo.observe(mini, { attributes: true, attributeFilter: ['class','style'] });
-      window.addEventListener('resize', () => { if (mini.classList.contains('show')) setPad(); });
-      if (mini.classList.contains('show')) setPad();
-    }
-    function waitForMini(){
-      const mini = document.getElementById('ai-mini');
-      if (mini) return attach(mini);
-      const obs = new MutationObserver(() => {
-        const el = document.getElementById('ai-mini');
-        if (el){ obs.disconnect(); attach(el); }
-      });
-      obs.observe(document.body, { childList: true, subtree: true });
-    }
-    if (document.readyState !== 'loading') waitForMini();
-    else document.addEventListener('DOMContentLoaded', waitForMini);
-  })();
-  </script>
-
-    <!-- AI Listen widget (production) -->
+  <!-- AI Listen widget (dev: talks to FastAPI on localhost:8000) -->
   <script>
   (function () {
     var s = document.createElement("script");
