update demo page to show button7

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
   <!-- Player styles (served from FastAPI /static) -->
   <link rel="stylesheet" href="http://localhost:8000/static/mini-player.css?v=108" />
   <link rel="stylesheet" href="http://localhost:8000/static/pro-player.css?v=108" />
+  <script defer src="http://localhost:8000/static/mini-player.js?v=24"></script>
 
   <!-- ===== Page look + icon variables for mini-player (optional) ===== -->
   <style>
