a lot for a little

--- a/static/index.html
+++ b/static/index.html
@@ -82,18 +82,7 @@
     </article>
   </main>
 
-  <!-- AI Listen widget (dev: talks to FastAPI on localhost:8000) -->
-  <script>
-  (function () {
-    var s = document.createElement("script");
-    s.defer = true;
-    s.src = "https://hgtts.onrender.com/static/tts-widget.v1.js?v=108";
-    // Tell the widget to call my FastAPI backend instead of window.location.origin
-    s.setAttribute("data-ail-api-base", "https://hgtts.onrender.com");
-    s.setAttribute("data-ail-tenant", "27929280-aff3-4827-bb5f-4bf5cae35128");
-    document.body.appendChild(s);
-  })();
-</script>
+  <p>Legacy demo page deprecated. Visit https://easyaudio.app for the live demo.</p>
 
 
 </body>
